# tatry

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  publish.yml  tests.yml
examples/: langchain_integration_example.py
src/tatry/: __init__.py  client.py  config.py  exceptions.py
src/tatry/api/: auth.py  retrieve.py  sources.py  utils.py
src/tatry/integrations/: __init__.py  langchain.py
src/tatry/models/: auth.py  retrieve.py  sources.py  utils.py
src/tatry/retrievers/: __init__.py  base.py
src/tatry/retrievers/tatry/: __init__.py  client.py  endpoints.py
tests/: conftest.py  test_client.py
tests/api/: test_auth.py  test_retrieve.py  test_sources.py  test_utils.py
tests/retrievers/: test_base.py
tests/retrievers/tatry/: conftest.py  test_client.py  test_endpoints.py
