[metadata]
name = tatry
version = attr: tatry.__version__
description = Python client for the Tatry Content Retrieval API
long_description = file: README.md
long_description_content_type = text/markdown
author = TatryAI
author_email = contact@tatry.ai
url = https://github.com/tatryai/tatry
project_urls =
    Bug Tracker = https://github.com/tatryai/tatry/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.25.0
    pydantic>=2.0.0
    tenacity>=8.0.0
    urllib3>=2.0.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    responses>=0.23.0
    pytest-mock>=3.10.0
    pytest-asyncio>=0.21.0
dev =
    %(test)s
    black>=22.0.0
    isort>=5.0.0
    mypy>=1.0.0
    flake8>=4.0.0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[mypy.plugins.pydantic.*]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True